# xyystore

./: README.md
AI_云存储/AI_YunCunChu/: .gitignore  Makefile  README.md  ai_search.md  chunked_upload.md
AI_云存储/AI_YunCunChu/common/: dashscope_api.cpp  deal_mysql.c  faiss_wrapper.cpp
AI_云存储/AI_YunCunChu/conf/: cfg.json
AI_云存储/AI_YunCunChu/docker/: configure_mirror.sh  docker-compose.yaml  setup.sh
AI_云存储/AI_YunCunChu/docker/fastcgi_app/: cfg.json  dockerfile  start.sh
AI_云存储/AI_YunCunChu/docker/mysql/: dockerfile  init.sql
AI_云存储/AI_YunCunChu/docker/nginx_fastdfs/: client.conf  dockerfile  mod_fastdfs.conf  nginx.conf  start.sh  storage.conf  tracker.conf
AI_云存储/AI_YunCunChu/include/: dashscope_api.h  faiss_wrapper.h  redis_keys.h  util_cgi.h
AI_云存储/AI_YunCunChu/picture_bed/: package-lock.json  package.json
AI_云存储/AI_YunCunChu/picture_bed/public/: index.html
AI_云存储/AI_YunCunChu/picture_bed/src/: App.css  App.js  index.js  theme.js
AI_云存储/AI_YunCunChu/picture_bed/src/components/: NavBar.js
AI_云存储/AI_YunCunChu/picture_bed/src/config/: index.js
AI_云存储/AI_YunCunChu/picture_bed/src/contexts/: AuthContext.js
AI_云存储/AI_YunCunChu/picture_bed/src/pages/: FileList.js  Home.js  ImageList.js  Login.js  SharedFiles.js  TopDownloads.js
AI_云存储/AI_YunCunChu/picture_bed/src/services/: ai.js  auth.js  dashboard.js  images.js  share.js
AI_云存储/AI_YunCunChu/src_cgi/: ai_cgi.cpp  chunk_init_cgi.c  chunk_merge_cgi.c  chunk_upload_cgi.c  dealfile_cgi.c  dealsharefile_cgi.c  login_cgi.c  md5_cgi.c  myfiles_cgi.c  reg_cgi.c  sharefiles_cgi.c  sharepicture_cgi.c  upload_cgi.c
Cloud drive/client/: client.cpp  function.h  makefile  md5.h  send_recv_cycle.cpp  upLoad_downLoad.cpp
Cloud drive/server/server/: MyDb.h  MyLog.h  factory.h  function.h  randomStr.cpp  send_recv_cycle.cpp  send_recv_file.cpp  server.cpp  tcp_init.cpp  time.h  workQue.h
Linux性能监控分析/Linux性能监控分析代码/monitor_system/: CMakeLists.txt  README.md
Linux性能监控分析/Linux性能监控分析代码/monitor_system/manager/: CMakeLists.txt
Linux性能监控分析/Linux性能监控分析代码/monitor_system/manager/include/: host_manager.h  query_manager.h
Linux性能监控分析/Linux性能监控分析代码/monitor_system/manager/include/rpc/: grpc_server.h  query_service.h  rpc_client.h
Linux性能监控分析/Linux性能监控分析代码/monitor_system/manager/sql/: init_server_performance.sql
Linux性能监控分析/Linux性能监控分析代码/monitor_system/manager/src/: host_manager.cpp  main.cpp  query_manager.cpp
Linux性能监控分析/Linux性能监控分析代码/monitor_system/manager/src/rpc/: grpc_server.cpp  query_service.cpp  rpc_client.cpp
Linux性能监控分析/Linux性能监控分析代码/monitor_system/proto/: CMakeLists.txt  cpu_load.proto  cpu_softirq.proto  cpu_stat.proto  disk_info.proto  mem_info.proto  monitor_info.proto  net_info.proto  query_api.proto
Linux性能监控分析/Linux性能监控分析代码/monitor_system/worker/: CMakeLists.txt
Linux性能监控分析/Linux性能监控分析代码/monitor_system/worker/include/monitor/: cpu_load_monitor.h  cpu_softirq_monitor.h  cpu_stat_monitor.h  disk_monitor.h  host_info_monitor.h  mem_monitor.h  metric_collector.h  monitor_inter.h  monitor_structs.h  net_ebpf_monitor.h  net_monitor.h  user_monitor.h
Linux性能监控分析/Linux性能监控分析代码/monitor_system/worker/include/rpc/: grpc_manager_impl.h  monitor_pusher.h
Linux性能监控分析/Linux性能监控分析代码/monitor_system/worker/include/utils/: read_file.h  utils.h
Linux性能监控分析/Linux性能监控分析代码/monitor_system/worker/scripts/: load_modules.sh
Linux性能监控分析/Linux性能监控分析代码/monitor_system/worker/src/: main.cpp
Linux性能监控分析/Linux性能监控分析代码/monitor_system/worker/src/ebpf/: Makefile  net_stats.bpf.c  net_stats.h  test_net_ebpf.cpp  vmlinux.h
Linux性能监控分析/Linux性能监控分析代码/monitor_system/worker/src/kmod/: Makefile  cpu_stat_collector.c  softirq_collector.c  test_cpu_stat.c  test_softirq.c
Linux性能监控分析/Linux性能监控分析代码/monitor_system/worker/src/monitor/: cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  disk_monitor.cpp  host_info_monitor.cpp  (+6 more)
chat_room/Client/: Makefile.txt
chat_room/Server/: Makefile
chat_room/Server/Common/: List.h
monitor_system_go/: build.sh  go.mod  start.sh
monitor_system_go/manager/: main.go
monitor_system_go/manager/model/: model.go
monitor_system_go/manager/rpc/: grpc_server.go
monitor_system_go/manager/service/: host_manager.go  query_manager.go
monitor_system_go/proto/: disk_info.proto  monitor_info.proto  query_api.proto
monitor_system_go/worker/: main.go
monitor_system_go/worker/ebpf/: net_stats.go
monitor_system_go/worker/monitor/: cpu_load_monitor.go  cpu_softirq_monitor.go  cpu_stat_monitor.go  disk_monitor.go  host_info_monitor.go  mem_monitor.go  metric_collector.go  net_ebpf_monitor.go  net_monitor.go
monitor_system_go/worker/rpc/: monitor_pusher.go
分布式缓存/: CMakeLists.txt  Dockerfile.txt  docker-compose.yml
分布式缓存/include/: cache_server.h  consistent_hash.h  grpc_client.h  http_handler.h
分布式缓存/proto/: cache.proto
分布式缓存/src/: cache_server.cpp  consistent_hash.cpp  grpc_client.cpp  http_handler.cpp  main.cpp
(+3 files in other folders)
